# pushups-commander

./: .gitignore  CHANGELOG.md  Makefile  TODO  cabal.project  pushups-commander.cabal
app/: Dog.hs  Main.hs  PushupsCommander.hs  PushupsCommander.hs-boot  PushupsRecordM.hs  Slack.hs
discord/: discord-bot.cabal
discord/app/: Main.hs
docs/: documentation.html  index.html  pricing.html  style.css  waitlist.html
irc/: irc-bot.cabal
irc/app/: Main.hs
pushups-logic/: CHANGELOG.md  MinimalExample.hs  README.md  cabal.project  pushups-logic.cabal  test
pushups-logic/app/: Bots.hs  ChatBot.hs  DiscordBot.hs  Main.hs  MessengerBot.hs  PushupsCommander.hs  PushupsRecordM.hs  SlackBot.hs  Utils.hs
pushups-logic/src/: PushupsCommander.hs  PushupsCommander.hs-boot  PushupsRecordM.hs
pushups-logic/tests/: test.hs
slack/: cabal.project  centos.txt  makefile  slack-bot.cabal
slack/app/: ChatBot.hs  Main.hs
web/: dashboard.html  documentation.html  heatmap.js  index.html  plot1.js  pushups-web.cabal  style.css
web/app/: Main.hs
web/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
web/dashboard/src/: App.vue
web/dashboard/src/assets/: base.css
web/dashboard/src/components/: GroupAllActivity.vue  GroupRecentActivity.vue  Heatmap.vue  LinesGraph.vue
