cabal-version:      2.4
name:               pushups-commander
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable pushups-commander
    main-is:          Main.hs 
    other-modules:    RecordM,
                      PushupsCommander,
                      PushupsRecordM
                      -- Slack

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -fllvm
    build-depends:
        base ^>= 4.15.0.0,
        text,
        aeson,
        unliftio,
        discord-haskell ^>=1.11.0,
        http-conduit,
        http-types,
        bytestring,
        time,
        lens,
        lens-aeson,
        transformers,
        vector,
        mtl
