cabal-version:      2.4
name:               pushups-logic
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable pushups
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options:      -threaded -fllvm
    build-depends:
        base ^>= 4.15.0.0,
        text,
        bytestring,
        mtl,
        cob,
        bots,
        pushups-logic


library
    exposed-modules:  PushupsCommander,
                      PushupsRecordM
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -fllvm
    build-depends:
        base ^>= 4.15.0.0,

        text,
        bytestring,

        mtl,
        transformers,

        lens,
        aeson,

        random ^>=1.2.1,

        cob^>=0.1.0.0,
        bots^>=0.1.0.0,

        http-conduit ^>=2.3.8,
        http-types ^>=0.12.3,

        warp,
        wai,
        wai-extra,
        servant^>=0.18.3,
        servant-server,

        async ^>=2.2.4,
        profunctors,
        cryptonite,
        hex-text,

        discord-haskell^>=1.11.0

test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: test.hs
  build-depends:
      base >= 4 && < 5
    , text
    , tasty >= 1.4.2
    , tasty-hunit
    , tasty-quickcheck
    , mtl
    , pushups-logic
    , cob
    , bots
