cabal-version:      2.4
name:               slack-bot
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable slack-bot
    main-is:          Main.hs 
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -threaded -fllvm
    build-depends:
        base ^>= 4.15.0.0,

        text,
        bytestring,

        mtl,
        transformers,

        lens,
        aeson,
        lens-aeson ^>=1.1.3,

        http-conduit ^>=2.3.8,
        http-types ^>=0.12.3,

        cob^>=0.1.0.0,
        pushups-logic,

        warp,
        wai,
        wai-extra,
        servant^>=0.18.3,
        servant-server
