cabal-version:      2.4
name:               pushups-web
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             romes
maintainer:         rodrigo.m.mesquita@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable pushups-web
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options:      -threaded -fllvm -rtsopts
    build-depends:
        base >= 4,
        text,
        cob,
        reflex,
        reflex-dom
